--- a/index.html
+++ b/index.html
@@ -115,9 +115,14 @@ height: 40px;
 font-size: 16px;
 color: #fff;
 padding: 0 5px;
-background: transparent;
+background-color: transparent;
 border: none;
 outline: none;
+}
+
+.input-group input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 30px rgb(46, 46, 57) inset !important;
+    -webkit-text-fill-color: white !important;
 }
 
 .input-group input:focus~label,
