--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@ function checkLogin(username, password) {
 }
 
         function login() {
-const username = document.querySelector('.userin-link').value;
-    const password = document.querySelector('.passwordin-link').value;
+const username1 = document.querySelector('.userin-link').value;
+    const password1 = document.querySelector('.passwordin-link').value;
 
-            if (username === "" || password === "")  {
+            if (username1 === "" || password1 === "")  {
                 return;
             }
             
