Bug Solved LOGIN

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ const username1 = document.querySelector('.userin-link').value;
     
 
 
-    checkLogin(username, password)
+    checkLogin(username1, password1)
         .then(message => {
             //login success
         })
