--- a/main_redesigned.html
+++ b/main_redesigned.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BankPatata - Tu Banco Digital de Confianza</title>
+    <title>BankPatata - Tu Banco de Confianza</title>
     <link rel="icon" type="image/x-icon" href="https://i.imgur.com/ClT7q2m.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
